--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "mongoose": "^4.12.3",
+    "socket.io": "^2.0.4",
     "validator": "^8.0.0"
   },
   "devDependencies": {
