--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.19.1",
     "mongoose": "^4.12.3",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "validator": "^8.0.0"
   },
   "devDependencies": {
